app.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: quarkus-api-example
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: quarkus-api-example
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: quarkus-api-example
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: quarkus-api-example
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: quarkus-api-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quarkus-api-example
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2022-08-23 - 19:43:05 +0000
      labels:
        app.kubernetes.io/name: quarkus-api-example
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: sarvangeeks/quarkus-api-example:latest
          imagePullPolicy: Always
          name: quarkus-api-example
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      imagePullSecrets:
          - name: sarvandockerhub
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quarkus-api-example
  namespace: muthuvaidy-dev
  labels:
    app.kubernetes.io/name: quarkus-api-example
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
spec:
  host: quarkus-api-example-muthuvaidy-dev.apps.sandbox-m2.ll9k.p1.openshiftapps.com
  path: /
  to:
    kind: Service
    name: quarkus-api-example
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
